# Tracy

./: .gitignore  README.md  camera-calibration.py  camera_calibration.py  matrix-viewer.py  pyproject.toml  readme  recording_camera.py  requirements.txt  threshold.py  transform_pictures.py  zmq_test.py
src/tools/: tracy_sim.py
src/tracy/: calibration.py  custom_types.py  detector.py  main.py  screen_client.py  video_capture.py  visualizations.py
